# pllaying

./: .cproject  .project  BUG_TRAVERSAL  CMakeLists.txt  ChangeLog  Doxyfile  Makefile  Makefile.ALL  Makefile.ALL.gcc  Makefile.ARM  Makefile.ARM.gcc  Makefile.AVX  Makefile.AVX-MPI  Makefile.AVX-PTHREADS  Makefile.AVX.MPI  Makefile.AVX.PTHREADS.gcc  Makefile.AVX.gcc  Makefile.AVX.shared  Makefile.BAYES.SSE3.gcc  Makefile.MPI  Makefile.PTHREADS.AVX.gcc  Makefile.SSE3  Makefile.SSE3-MPI  Makefile.SSE3-PTHREADS  Makefile.SSE3.MPI  Makefile.SSE3.PTHREADS.gcc  Makefile.SSE3.gcc  Makefile.am  RAxML_info.MASTER20  README  README.md  Rakefile  alignment.c  avxLikelihood.c  axml.c  axml.h  bayes.c  bipartitionList.c  check_malloc.sh  configure.ac  (+44 more)
MPI/: Makefile.am
MPI-version/: Makefile.SSE3.gcc  avxLikelihood.c  axml.c  axml.h  bayes.c  bipartitionList.c  evaluateGenericSpecial.c  evaluatePartialGenericSpecial.c  fastDNAparsimony.c  globalVariables.h  makenewzGenericSpecial.c  models.c  newviewGenericSpecial.c  optimizeModel.c  randomTree.c  searchAlgo.c  treeIO.c
dox/: doxygen_rearrange.py
examples/: Makefile.am  README
examples/Alignment/: Makefile  likelihood.c  msa.c  phylip_parser.c
examples/BUG/: Makefile.AVX.PTHREADS.gcc  main.c  (+3 more)
legacy/: axml.c  old_code.c  old_code.h
lockless_allocator/: ll_alloc.c  ll_alloc.c~
man/: libpll.3
parser/: RAxML_info.500x4.aa  RAxML_info.500x4.aa.singlegene  axml.c  axml.h  common.c  common.h  models.c  parsePartitions.c  parser  ssort.c  ssort.h
phylip_parser/: Makefile  lexer.c  msa_sites.c  msa_sites.h  phylip.c  phylip.h
src/: Makefile.AVX  Makefile.AVX-MPI  Makefile.AVX-PTHREADS  Makefile.MIC-PTHREADS  Makefile.SSE3  Makefile.SSE3-MPI  Makefile.SSE3-PTHREADS  Makefile.am  alignment.c  avxLikelihood.c  bipartitionList.c  errcodes.h  evaluateGenericSpecial.c  evaluatePartialGenericSpecial.c  fastDNAparsimony.c  genericParallelization.c  globalVariables.h  hash.c  makenewzGenericSpecial.c  mem_alloc.h  mic_native.c  mic_native_aa.c  models.c  newick.c  newviewGenericSpecial.c  optimizeModel.c  parsePartition.c  pll.h  pllInternal.h  randomTree.c  recom.c  restartHashTable.c  searchAlgo.c  topologies.c  trash.c  treeIO.c  treeIO.h  utils.c
system/: include_GCC-AVX-PTHREADS.mk  include_GCC-AVX.mk  include_GCC-SSE3-PTHREADS.mk  include_GCC-SSE3.mk  include_MPI-GCC-SSE3.mk  include_REORDER.mk
testdata/: 1288.binary  1288.dna.singlegene.binary  20  20.binary  20.dna.singlegene.binary  README  TEST.binary
testscript/: RAxML_ERR_log.txt  RAxML_binaryCheckpoint.developed_0  RAxML_binaryCheckpoint.developed_1  RAxML_binaryCheckpoint.developed_10  RAxML_binaryCheckpoint.developed_11  RAxML_binaryCheckpoint.developed_2  RAxML_binaryCheckpoint.developed_3  RAxML_binaryCheckpoint.developed_4  RAxML_binaryCheckpoint.developed_5  RAxML_binaryCheckpoint.developed_6  RAxML_binaryCheckpoint.developed_7  RAxML_binaryCheckpoint.developed_8  RAxML_binaryCheckpoint.developed_9  RAxML_binaryCheckpoint.stable_0  RAxML_binaryCheckpoint.stable_1  RAxML_binaryCheckpoint.stable_10  RAxML_binaryCheckpoint.stable_11  RAxML_binaryCheckpoint.stable_2  RAxML_binaryCheckpoint.stable_3  RAxML_binaryCheckpoint.stable_4  RAxML_binaryCheckpoint.stable_5  RAxML_binaryCheckpoint.stable_6  RAxML_binaryCheckpoint.stable_7  RAxML_binaryCheckpoint.stable_8  RAxML_binaryCheckpoint.stable_9  RAxML_info.developed  RAxML_info.stable  RAxML_log.developed  RAxML_log.stable  RAxML_log.txt  RAxML_result.developed  recomtest.sh  supertestscript.sh  testscript.AVX.gcc  testscript.PTHREADS.AVX.gcc  testscript.SSE3.MPI.gcc  testscript.SSE3.PTHREADS.gcc  testscript.SSE3.gcc  testscript_recom.SSE3.PTHREADS.gcc  testscript_recom.SSE3.gcc
(+63 files in other folders)
